Issue: x-axis overlaps the chart

--- a/main.css
+++ b/main.css
@@ -1,3 +1,18 @@
-div {
-  border: 1px solid #000;
+.title {
+  margin: 30px;
+  font-family: sans-serif;
+  text-align: center;
+  color: #3399CC;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: black;
+  shape-rendering: crispEdges;
+}
+
+.axis text {
+  font-family: sans-serif;
+  font-size: 14px;
 }
